# bird-labeler

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  justfile  pyproject.toml
.github/workflows/: ci.yml
configs/: default.yaml
docker/: Dockerfile  docker-compose.yml
scripts/: grab_clip.py
src/bird_labeler/: __main__.py  cli.py
src/bird_labeler/pipeline/: classify.py  detect.py  ingest.py  track.py
tests/: test_config.py  test_ingest_normalize.py  test_smoke.py
